[gd_scene load_steps=3 format=3 uid="uid://cr8dy2h5ga876"]

[ext_resource type="Script" path="res://src/ui/components/NameInputDialog.gd" id="1_name_dialog"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dialog"]
bg_color = Color(0.1, 0.15, 0.2, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.6, 0.8, 0.9)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="NameInputDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_name_dialog")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="DialogPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dialog")

[node name="VBox" type="VBoxContainer" parent="DialogPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="DialogPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 24
text = "Enter Your Name"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="DialogPanel/VBox"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Description" type="Label" parent="DialogPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "This name will appear on the leaderboard"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="DialogPanel/VBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="DialogPanel/VBox"]
layout_mode = 2
placeholder_text = "Enter your name..."
max_length = 20
select_all_on_focus = true

[node name="Spacer3" type="Control" parent="DialogPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="DialogPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="DialogPanel/VBox/ButtonContainer"]
layout_mode = 2
text = "Cancel"

[node name="Spacer4" type="Control" parent="DialogPanel/VBox/ButtonContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="DialogPanel/VBox/ButtonContainer"]
layout_mode = 2
text = "Confirm" 